Zmiana nazwy głównego routa z people na schedule.

--- a/02-ember/index.html
+++ b/02-ember/index.html
@@ -6,7 +6,7 @@
     <link href="styles/normalize.css" rel="stylesheet" type="text/css" />
     <link href="styles/all.css" rel="stylesheet" type="text/css" />
 
-    <script type="text/x-handlebars" data-template-name="people">
+    <script type="text/x-handlebars" data-template-name="schedule">
       <div class="wrapper">
         <table class="schedule">
           <thead>
@@ -51,7 +51,7 @@
           {{#link-to "person" "jas" classNames="grey button icon-only"}}
             <i class="previous icon">Previous</i>
           {{/link-to}}
-          {{#link-to "people" classNames="grey button icon-only"}}
+          {{#link-to "schedule" classNames="grey button icon-only"}}
             <i class="index icon">Index</i>
           {{/link-to}}
 
