Wszędzie widok person -> assignment.

--- a/01-html/index.html
+++ b/01-html/index.html
@@ -12,33 +12,33 @@
         <thead>
           <tr>
             <td></td>
-            <th><a href="person.html" class="button">Jaś</a></th>
-            <th><a href="person.html" class="button">Kasia</a></th>
-            <th><a href="person.html" class="button">Wojtuś</a></th>
-            <th><a href="person.html" class="button">Izka</a></th>
+            <th><a href="assignment.html" class="button">Jaś</a></th>
+            <th><a href="assignment.html" class="button">Kasia</a></th>
+            <th><a href="assignment.html" class="button">Wojtuś</a></th>
+            <th><a href="assignment.html" class="button">Izka</a></th>
           </tr>
         </thead>
         <tbody>
           <tr>
             <th>17 Lis</th>
-            <td><a href="person.html"><img src="images/duties/bathroom-icon.png" /></a></td>
-            <td><a href="person.html"><img src="images/duties/bathroom-icon.png" /></a></td>
-            <td><a href="person.html"><img src="images/duties/bathroom-icon.png" /></a></td>
-            <td><a href="person.html"><img src="images/duties/bathroom-icon.png" /></a></td>
+            <td><a href="assignment.html"><img src="images/duties/bathroom-icon.png" /></a></td>
+            <td><a href="assignment.html"><img src="images/duties/bathroom-icon.png" /></a></td>
+            <td><a href="assignment.html"><img src="images/duties/bathroom-icon.png" /></a></td>
+            <td><a href="assignment.html"><img src="images/duties/bathroom-icon.png" /></a></td>
           </tr>
           <tr class="current">
             <th>24 Lis</th>
-            <td><a href="person.html"><img src="images/duties/bathroom-icon.png" /></a></td>
-            <td><a href="person.html"><img src="images/duties/bathroom-icon.png" /></a></td>
-            <td><a href="person.html"><img src="images/duties/bathroom-icon.png" /></a></td>
-            <td><a href="person.html"><img src="images/duties/bathroom-icon.png" /></a></td>
+            <td><a href="assignment.html"><img src="images/duties/bathroom-icon.png" /></a></td>
+            <td><a href="assignment.html"><img src="images/duties/bathroom-icon.png" /></a></td>
+            <td><a href="assignment.html"><img src="images/duties/bathroom-icon.png" /></a></td>
+            <td><a href="assignment.html"><img src="images/duties/bathroom-icon.png" /></a></td>
           </tr>
           <tr>
             <th>1 Gru</th>
-            <td><a href="person.html"><img src="images/duties/bathroom-icon.png" /></a></td>
-            <td><a href="person.html"><img src="images/duties/bathroom-icon.png" /></a></td>
-            <td><a href="person.html"><img src="images/duties/bathroom-icon.png" /></a></td>
-            <td><a href="person.html"><img src="images/duties/bathroom-icon.png" /></a></td>
+            <td><a href="assignment.html"><img src="images/duties/bathroom-icon.png" /></a></td>
+            <td><a href="assignment.html"><img src="images/duties/bathroom-icon.png" /></a></td>
+            <td><a href="assignment.html"><img src="images/duties/bathroom-icon.png" /></a></td>
+            <td><a href="assignment.html"><img src="images/duties/bathroom-icon.png" /></a></td>
           </tr>
         </tbody>
       </table>
