--- a/02-ember/index.html
+++ b/02-ember/index.html
@@ -12,43 +12,43 @@
           <thead>
             <tr>
               <td></td>
-              <th>{{#link-to "person" "jas" classNames="button"}}Jaś{{/link-to}}</th>
-              <th>{{#link-to "person" "jas" classNames="button"}}Kasia{{/link-to}}</th>
-              <th>{{#link-to "person" "jas" classNames="button"}}Wojtuś{{/link-to}}</th>
-              <th>{{#link-to "person" "jas" classNames="button"}}Izka{{/link-to}}</th>
+              <th>{{#link-to "assignment" "jas" classNames="button"}}Jaś{{/link-to}}</th>
+              <th>{{#link-to "assignment" "jas" classNames="button"}}Kasia{{/link-to}}</th>
+              <th>{{#link-to "assignment" "jas" classNames="button"}}Wojtuś{{/link-to}}</th>
+              <th>{{#link-to "assignment" "jas" classNames="button"}}Izka{{/link-to}}</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <th>17 Lis</th>
-              <td>{{#link-to "person" "jas"}}<img src="images/duties/bathroom-icon.png" />{{/link-to}}</td>
-              <td>{{#link-to "person" "jas"}}<img src="images/duties/bathroom-icon.png" />{{/link-to}}</td>
-              <td>{{#link-to "person" "jas"}}<img src="images/duties/bathroom-icon.png" />{{/link-to}}</td>
-              <td>{{#link-to "person" "jas"}}<img src="images/duties/bathroom-icon.png" />{{/link-to}}</td>
+              <td>{{#link-to "assignment" "jas"}}<img src="images/duties/bathroom-icon.png" />{{/link-to}}</td>
+              <td>{{#link-to "assignment" "jas"}}<img src="images/duties/bathroom-icon.png" />{{/link-to}}</td>
+              <td>{{#link-to "assignment" "jas"}}<img src="images/duties/bathroom-icon.png" />{{/link-to}}</td>
+              <td>{{#link-to "assignment" "jas"}}<img src="images/duties/bathroom-icon.png" />{{/link-to}}</td>
             </tr>
             <tr class="current">
               <th>24 Lis</th>
-              <td>{{#link-to "person" "jas"}}<img src="images/duties/bathroom-icon.png" />{{/link-to}}</td>
-              <td>{{#link-to "person" "jas"}}<img src="images/duties/bathroom-icon.png" />{{/link-to}}</td>
-              <td>{{#link-to "person" "jas"}}<img src="images/duties/bathroom-icon.png" />{{/link-to}}</td>
-              <td>{{#link-to "person" "jas"}}<img src="images/duties/bathroom-icon.png" />{{/link-to}}</td>
+              <td>{{#link-to "assignment" "jas"}}<img src="images/duties/bathroom-icon.png" />{{/link-to}}</td>
+              <td>{{#link-to "assignment" "jas"}}<img src="images/duties/bathroom-icon.png" />{{/link-to}}</td>
+              <td>{{#link-to "assignment" "jas"}}<img src="images/duties/bathroom-icon.png" />{{/link-to}}</td>
+              <td>{{#link-to "assignment" "jas"}}<img src="images/duties/bathroom-icon.png" />{{/link-to}}</td>
             </tr>
             <tr>
               <th>1 Gru</th>
-              <td>{{#link-to "person" "jas"}}<img src="images/duties/bathroom-icon.png" />{{/link-to}}</td>
-              <td>{{#link-to "person" "jas"}}<img src="images/duties/bathroom-icon.png" />{{/link-to}}</td>
-              <td>{{#link-to "person" "jas"}}<img src="images/duties/bathroom-icon.png" />{{/link-to}}</td>
-              <td>{{#link-to "person" "jas"}}<img src="images/duties/bathroom-icon.png" />{{/link-to}}</td>
+              <td>{{#link-to "assignment" "jas"}}<img src="images/duties/bathroom-icon.png" />{{/link-to}}</td>
+              <td>{{#link-to "assignment" "jas"}}<img src="images/duties/bathroom-icon.png" />{{/link-to}}</td>
+              <td>{{#link-to "assignment" "jas"}}<img src="images/duties/bathroom-icon.png" />{{/link-to}}</td>
+              <td>{{#link-to "assignment" "jas"}}<img src="images/duties/bathroom-icon.png" />{{/link-to}}</td>
             </tr>
           </tbody>
         </table>
       </div>
     </script>
 
-    <script type="text/x-handlebars" data-template-name="person">
+    <script type="text/x-handlebars" data-template-name="assignment">
       <div class="wrapper">
         <nav class="assignment-nav">
-          {{#link-to "person" "jas" classNames="grey button icon-only"}}
+          {{#link-to "assignment" "jas" classNames="grey button icon-only"}}
             <i class="previous icon">Previous</i>
           {{/link-to}}
           {{#link-to "schedule" classNames="grey button icon-only"}}
@@ -64,7 +64,7 @@
             30 Lis
           </span>
 
-          {{#link-to "person" "jas" classNames="grey button icon-only last"}}
+          {{#link-to "assignment" "jas" classNames="grey button icon-only last"}}
             <i class="next icon">Next</i>
           {{/link-to}}
         </nav>
